# cykelvenner

./: .buildpacks  .gitignore  Cargo.toml  Procfile  README.md  justfile
frontend/: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
frontend/src/: App.svelte  index.html
frontend/src/components/: Card.svelte  SignInForm.svelte  SignUpForm.svelte
frontend/src/models/: Card.ts
frontend/src/routes/: __layout.svelte  sign-in.svelte  sign-up.svelte
src/: main.rs
