[package]
name = "cykelvenner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
axum = "0.5.5"
serde_json = "1.0.79"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres", "time", "json" , "offline"] }
tokio = { version = "1.17.0", features = ["full"] }
tower-http = { version = "0.2.5", features = ["trace", "fs"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
